xwayland 23.0.99.901 prerelease - build fails on musl libc
In file included from ../hw/xwayland/xwayland-window-buffers.c:31:
../hw/xwayland/xwayland-window.h:54:5: error: unknown type name 'dev_t'
54 | dev_t drm_dev;
| ^~~~~
adding #include <sys/types.h>
to xwayland-window.h
works fine as a resolution