hw/xwayland/xwayland-window.h
@@ -28,8 +28,11 @@
 
 #include <xwayland-config.h>
 
+#include <sys/types.h>
+
 #include <stdio.h>
 #include <unistd.h>
+
 #include <X11/X.h>
 #include <dix.h>
 #include <propertyst.h>
